# QML-chat-software-frontend

./: CLAUDE.md  CMakeLists.txt  FramelessWindow.qml  LoginWindow.qml  Main.qml  Marketplace_page_q.qml  Message_page_q.qml  Nav_wheel.qml  Server_page_q.qml  Setting_page_q.qml  Text_width_calulator.qml  main.cpp  resources.qrc  server_page_q.qml  systemscrollhandler.cpp  systemscrollhandler.h
Message_component/: Friends_chat_list_v1.qml  Message_chat_area.qml
Message_component/message_display/: message_room_style_V1.qml
Server_Page_status/: Chat_room_status.qml  eventbus.h
Server_component/: Round_img_avatar.qml  Server_chat_block.qml  Server_list.qml  Server_members_list_block.qml
Server_component/Server_function_block_component/: Server1_function_block.qml  Server2_function_block.qml
Server_component/Server_function_block_component/Server_additional_block/: Server_function_search_bar.qml  Server_gallery_and_video.qml  Server_text_chat.qml  Server_voice_channel.qml
Server_component/Server_function_windows/: Group_gallery.qml  Group_text_chat.qml  Group_video.qml
Server_component/Server_function_windows/Server_function_windows_component/: Server_chat_block.qml  Server_members_list_block.qml
Setting_page_component/: Setting_list_v2.qml
Setting_page_component/Settting_option_pages/: Profile_setting.qml
Setting_page_component/未命名檔案夾/: Profile_setting.qml
Style_component/: BlurCard.qml  FrostedGlass.qml  FrostedGlass_V2.qml  Theme_mode.qml
platform/: SystemWindow.cpp  SystemWindow.h  SystemWindowChrome.cpp  SystemWindowChrome.h
platform/macos/: MacSystemWindowChrome.mm  MacSystemWindowChrome_p.h
platform/windows/: WindowsPopupChrome.cpp  WindowsPopupChrome.h  WindowsWindowControlButton.cpp  WindowsWindowControlButton.h
